--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "kittens-are-on-the-way.org",
-  "version": "1.0.0",
-  "author": "0@39.yt (Yurij Mikhalevich)",
+  "name": "simple-rating",
+  "version": "0.2.0",
+  "author": {
+    "name": "Yurij Mikhalevich",
+    "email": "0@39.yt",
+    "url": "https://39.yt/"
+  },
   "license": "GPLv3",
   "dependencies": {
-    "mongodb": "~1.3.20",
-    "socket.io": "~0.9.16",
-    "async": "~0.2.9",
-    "bcrypt": "~0.7.7"
+    "mongodb": "1.4.x",
+    "39f-socket.io": "1.0.x",
+    "async": "0.9.x",
+    "bcrypt": "0.8.x",
+    "jsonfile": "2.0.x"
   }
 }
