--- a/public/bower.json
+++ b/public/bower.json
@@ -1,11 +1,15 @@
 {
-  "name": "kittens-are-on-the-way.org",
-  "version": "1.0.0",
-  "author": "0@39.yt (Yurij Mikhalevich)",
+  "name": "simple-rating",
+  "version": "0.2.0",
+  "author": {
+    "name": "Yurij Mikhalevich",
+    "email": "0@39.yt",
+    "url": "https://39.yt/"
+  },
   "license": "GPLv3",
   "dependencies": {
-    "jquery": "~2.0.3",
-    "bootstrap": "~3.0.2",
-    "angular": "~1.2.3"
+    "jquery": "2.1.x",
+    "bootstrap": "3.2.x",
+    "angularjs": "1.3.x"
   }
 }
