--- a/static/bower.json
+++ b/static/bower.json
@@ -9,7 +9,8 @@
   "license": "GPLv3",
   "dependencies": {
     "jquery": "2.1.x",
-    "bootstrap": "3.2.x",
-    "angularjs": "1.2.x"
+    "bootstrap": "3.3.x",
+    "angularjs": "1.3.x",
+    "bootbox": "4.3.x"
   }
 }
